syntax = "proto3";

option go_package =".";

message OverviewResponse {
    string UserID = 1;
    message Item {
        string name = 1;
        string id = 2;
        int32 qty = 3;
        int32 price = 4;
    }
    repeated Item item = 2;

    int32 totalPrice = 3;
    int32 shippingPrice = 4;
    int32 rewardPointsConsumed = 5;
}

message OverviewRequest {
    string UserID = 1;
}

service Checkout{
    rpc OrderOverview (OverviewRequest) returns (OverviewResponse);
}
