
syntax = "proto3";
option go_package =".;protos";

message GetRewardPointsRequest {
    string UserId = 1;
}
message GetRewardPointsResponse {
    uint32 RewardPoints = 1;
}

message UpdateRewardPointsRequest {
    string UserId = 1;
    uint32 RewardPoints = 2;
}
message UpdatePointsResponse {
    bool UpdateResponse= 1;
}

service Reward {
    rpc GetRewardPoints (GetRewardPointsRequest) returns (GetRewardPointsResponse);
    rpc UpdateRewardPoints (UpdateRewardPointsRequest) returns (UpdatePointsResponse);
}